fix spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -4,7 +4,7 @@
 }
 
 .xs-1 {
-  width: 100%
+  width: 100%;
 }
 
 @media only screen and (min-width: 25em) {
@@ -23,6 +23,14 @@
 
   .m-1-2 {
     width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .l-1-3 {
+    width: 33.3333%;
   }
 
 }
